resources/k8s/ocp_okd/v4.0.0/qotd_rating.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qotd-rating
  namespace: amashargah-dev
  labels:
    app: qotd
    tier: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qotd-rating
  template:
    metadata:
      labels:
        app: qotd-rating
    spec:
      restartPolicy: Always
      containers:
        - name: qotd-rating
          image: quay.io/amashargah/amashargahitops:1762258965-cve20222068
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3004
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 60
            timeoutSeconds: 20
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 5
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              cpu: "25m"
              memory: "200Mi"
            limits:
              cpu: "200m"
              memory: "800Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-rating
  namespace: amashargah-dev
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
      name: http
  selector:
    app: qotd-rating
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: qotd-rating
  namespace: amashargah-dev
  labels:
    app: qotd
    tier: web
spec:
  to:
    kind: Service
    name: qotd-rating
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
